# midas

./: Cargo.toml  README.md  TODO.md
src/: cards.rs  game.rs  lib.rs  main.rs  player.rs  players.rs
src/ai/: action.rs  betting.rs  mod.rs
src/cards/: card.rs  hand.rs  mod.rs  shoe.rs
src/game/: game.rs  mod.rs  round.rs  table.rs
src/player/: action.rs  human.rs  mod.rs  optimal_ai.rs  player.rs  simple_ai.rs
src/players/: dealer.rs  mod.rs  player.rs
